<resources>
    <string name="app_name">Memories</string>
    <string name="text_memory_title">Memory Title</string>
    <string name="text_memory_comment">Memory Comment</string>
    <string name="text_memory_location">Memory Location</string>
    <string name="text_memory_date">Memory Date</string>
    <string name="text_save_memory">Save Memory</string>
    <string name="text_capture_photo">Capture Photo</string>
    <string name="text_load_photo">Load Photo</string>
    <string name="text_date">Date</string>
    <string name="text_upload">Upload</string>
    <string name="text_memories">Memories</string>
    <string name="text_map">Map</string>
    <string name="text_close_memory">Close</string>
    <string name="delete">Delete</string>
    <string name="delete_memory_confirmation">Are you sure you want to delete this memory?</string>
</resources>
