<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_upload"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/text_upload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_memories"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/text_memories"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/text_map"
        app:showAsAction="ifRoom" />

</menu>