<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="200dp"
        android:layout_height="175dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_memory_title"
        style="@style/style_text_input_layout"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_memory_title"
            style="@style/style_text_input_edit_text"
            android:hint="@string/text_memory_title" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_memory_comment"
        style="@style/style_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_memory_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_memory_comment"
            style="@style/style_text_input_edit_text"
            android:hint="@string/text_memory_comment" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_memory_location"
        style="@style/style_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_memory_comment">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_memory_location"
            style="@style/style_text_input_edit_text"
            android:hint="@string/text_memory_location" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_memory_date"
        style="@style/style_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_memory_location">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_memory_date"
            style="@style/style_text_input_edit_text"
            android:focusable="false"
            android:hint="@string/text_memory_date" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_save_memory"
        style="@style/style_button"
        android:text="@string/text_save_memory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_memory_date" />

    <ImageButton
        android:id="@+id/button_delete_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

</android.support.constraint.ConstraintLayout>